# ckanext-search-tweaks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
changes/: _1.feature  _1.removal  _2.feature  _3.feature
ckanext/: __init__.py
ckanext/search_tweaks/: __init__.py  cli.py  config.py  config_declaration.yaml  interfaces.py  plugin.py  shared.py
ckanext/search_tweaks/advanced_search/: plugin.py
ckanext/search_tweaks/advanced_search/assets/: advanced-search.css  advanced-search.js  webassets.yml
ckanext/search_tweaks/advanced_search/templates/advanced_search/: search_form.html
ckanext/search_tweaks/assets/: webassets.yml
ckanext/search_tweaks/field_relevance/: plugin.py  views.py
ckanext/search_tweaks/field_relevance/assets/: search-tweaks-reflect-range-in-label.js  webassets.yml
ckanext/search_tweaks/field_relevance/templates/search_tweaks/field_relevance/: promote.html
ckanext/search_tweaks/query_popularity/: config.py  config_declaration.yaml  plugin.py  score.py
ckanext/search_tweaks/query_popularity/logic/: action.py  auth.py  schema.py
ckanext/search_tweaks/query_relevance/: __init__.py  boost.py  cli.py  config.py  config_declaration.yaml  plugin.py  score.py  storage.py
ckanext/search_tweaks/relevance/: score.py  storage.py
ckanext/search_tweaks/spellcheck/: __init__.py  cli.py  helpers.py  plugin.py
ckanext/search_tweaks/spellcheck/templates/search_tweaks/: did_you_mean.html
ckanext/search_tweaks/tests/: conftest.py  schema.xml  test_plugin.py  test_relevance.py
ckanext/search_tweaks/tests/query_relevance/: test_plugin.py  test_score.py  test_search.py  test_storage.py
ckanext/search_tweaks/tests/relevance/: test_score.py  test_storage.py
ckanext/search_tweaks/tests/spellcheck/: test_plugin.py
ckanext/search_tweaks/visit_relevance/: __init__.py  plugin.py  score.py  storage.py
