[metadata]
name = ckanext-search-tweaks
version = 0.6.1a2
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-search-tweaks
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 freezegun
                 typing_extensions>=4.0.0
                 ckanext-toolbelt>=0.4.11
include_package_data = True

[options.entry_points]
ckan.plugins =
             search_tweaks = ckanext.search_tweaks.plugin:SearchTweaksPlugin
             search_tweaks_query_relevance = ckanext.search_tweaks.query_relevance.plugin:QueryRelevancePlugin
             search_tweaks_field_relevance = ckanext.search_tweaks.field_relevance.plugin:FieldRelevancePlugin
             search_tweaks_spellcheck = ckanext.search_tweaks.spellcheck.plugin:SpellcheckPlugin
             search_tweaks_advanced_search = ckanext.search_tweaks.advanced_search.plugin:AdvancedSearchPlugin
             search_tweaks_query_popularity = ckanext.search_tweaks.query_popularity.plugin:QueryPopularityPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
advanced-search =

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/search_tweaks/i18n/ckanext-search_tweaks.pot
width = 80

[init_catalog]
domain = ckanext-search_tweaks
input_file = ckanext/search_tweaks/i18n/ckanext-search_tweaks.pot
output_dir = ckanext/search_tweaks/i18n

[update_catalog]
domain = ckanext-search_tweaks
input_file = ckanext/search_tweaks/i18n/ckanext-search_tweaks.pot
output_dir = ckanext/search_tweaks/i18n
previous = true

[compile_catalog]
domain = ckanext-search_tweaks
directory = ckanext/search_tweaks/i18n
statistics = true
